asignacion precio edificios y alquileres + pulir comandos